// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pre process css > generateCSSCode: get css code 1`] = `"@import ./test;.test {    color: v-bind(appTheme2);}"`;

exports[`pre process css > generateCSSCode: get less code 1`] = `"@import ./test;#app div {  color: v-bind(fooColor);}"`;

exports[`pre process css > generateCSSCode: get scss code 1`] = `"@import ./test;#app div {  color: v-bind(fooColor);}"`;

exports[`pre process css > generateCSSCode: get styl code 1`] = `"@import ./test;#app div {  color: v-bind(stylColor);}"`;

exports[`pre process css > getCSSVarsCode: generate code 1`] = `
{
  "vBindCode": {
    "color": Set {
      "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
div{color:v-bind(color)}
/* <inject end> */
",
    },
  },
  "vBindEntry": false,
  "vBindPathNode": {
    "block": {
      "children": [
        {
          "important": false,
          "loc": null,
          "property": "color",
          "type": "Declaration",
          "value": {
            "children": [
              {
                "children": [
                  {
                    "loc": null,
                    "name": "color",
                    "type": "Identifier",
                  },
                ],
                "loc": null,
                "name": "v-bind",
                "type": "Function",
              },
            ],
            "loc": null,
            "type": "Value",
          },
        },
      ],
      "loc": null,
      "type": "Block",
    },
    "loc": null,
    "prelude": {
      "children": [
        {
          "children": [
            {
              "loc": null,
              "name": "div",
              "type": "TypeSelector",
            },
          ],
          "loc": null,
          "type": "Selector",
        },
      ],
      "loc": null,
      "type": "SelectorList",
    },
    "type": "Rule",
  },
}
`;

exports[`pre process css > getCurFileContent: basic 1`] = `
"#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > getCurFileContent: no ;  1`] = `
"#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > getCurFileContent: no start and end  1`] = `
"@import \\"./test\\"
@use './test-use'
@require './test-require'
#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > preProcessCSS: basic 1`] = `
{
  "color": Set {
    "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
p{color:v-bind(color)}
/* <inject end> */
",
  },
}
`;

exports[`pre process css > preProcessCSS: basic 2`] = `
{
  "appTheme2": Set {
    "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
.test{color:v-bind(appTheme2)}
/* <inject end> */
",
  },
}
`;

exports[`pre process css > setImportToCompileRes: @import 1`] = `
"@import \\"./test\\";
#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > setImportToCompileRes: @require 1`] = `
"@import \\"./test\\";
#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > setImportToCompileRes: @use 1`] = `
"@import \\"./test\\";
#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > setImportToCompileRes: basic 1`] = `
"@import './test-use';
@import \\"./test\\";
#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > setImportToCompileRes: no @use and @import and @require 1`] = `
"#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > walkCSSTree: basic 1`] = `
{
  "importer": "./test",
  "vBindCode": {
    "bar": Set {
      "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
.bar{color:v-bind(bar);font-size:22px}
/* <inject end> */
",
    },
    "color": Set {
      "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
.foo{color:v-bind(color);font-size:20px}
/* <inject end> */
",
    },
  },
}
`;

exports[`pre process css > walkCSSTree: helper i is false 1`] = `
{
  "importer": "",
  "vBindCode": {
    "bar": Set {
      "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
.bar{color:v-bind(bar);font-size:22px}
/* <inject end> */
",
    },
    "color": Set {
      "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
.foo{color:v-bind(color);font-size:20px}
/* <inject end> */
",
    },
  },
}
`;
